--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alvin Okeu Harvana</title>
+  <title>Alvin Harvana</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="profileText">
-        <h3>Alvin<br />Harvana<br /><span>XII Rekayasa Perangkat Lunak</span></h3>
+        <h3>Alvin<br />Harvana<br /><span>Rekayasa Perangkat Lunak</span></h3>
       </div>
     </div>
     <div class="contentBox">
